# trader_chatbot

./: .env.example  .gitignore  Dockerfile  chat_model.py  chatbot.py  docker-build.sh  extractors.py  file.js  index.html.1  main.py  ollama_vs_openaI.ipynb  openai_api.py  openai_structs.py  pyproject.toml  token_usage.ipynb  wallet.db
fastapicode/: main.py
prompts/: You have full permission to autonomously.md  action_prompt.txt  amount_prompt.txt  crypto_prompt.txt  exchange_prompt.txt  prompt (Copy).txt  prompt.txt  prompt_pre.txt  prompt_standard_order.txt  trade_prompt.txt
trader_chatbot/: abi_list.py  chatbot.py  constants.py  create_table.py  database.py  extractors.py  main.py  markdonw_render.py  models.py  openai_structs.py  tool_functions.py  web3_fucntion_args.py  web3_read_functions.py
trader_chatbot/abis/: alice.py  muon_node_manager.py  muon_node_staking.py
trader_chatbot/toolkits/: markdonw_rendering.py  message_handling.py  web3_convertion.py
