[project]
name            = "trader-chatbot"
version         = "0.1.0"
readme          = "README.md"
requires-python = ">=3.12"
url             = "https://github.com/Alikavari/trader_chatbot"
dependencies    = [
    "langchain-openai>=0.3.3",
    "openai>=1.61.0",
    "python-dotenv>=1.0.1",
    "fastapi[standard]>=0.115.8",
    "langchain-ollama>=0.2.3",
    "langchain[groq]>=0.3.18",
    "langchain-community>=0.3.17",
    "langgraph>=0.2.70",
    "langchain-anthropic>=0.3.7",
    "tavily-python>=0.5.1",
    "langgraph-checkpoint-sqlite>=2.0.3",
    "web3>=7.8.0",
]

[tool.rye.scripts]
dev = "fastapi dev trader_chatbot/main.py"
main = "fastapi run trader_chatbot/main.py"

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["trader_chatbot"]
